# Data

./: .gitattributes  .gitignore  .python-version  Data.code-workspace  README.md  load-data.ipynb  pyproject.toml
_raw_data/dexcom/: valid_data.csv
_raw_data/sharpicManU-GlucoseData/Activity Data/: UoMActivity2301.csv  UoMActivity2302.csv  UoMActivity2303.csv  UoMActivity2304.csv  UoMActivity2305.csv  UoMActivity2306.csv  UoMActivity2307.csv  UoMActivity2308.csv  UoMActivity2309.csv  UoMActivity2310.csv  UoMActivity2313.csv  UoMActivity2314.csv  UoMActivity2320.csv  UoMActivity2401.csv  UoMActivity2403.csv  UoMActivity2404.csv  UoMActivity2405.csv
_raw_data/sharpicManU-GlucoseData/Glucose Data/: UoMGlucose2301.csv  UoMGlucose2302.csv  UoMGlucose2303.csv  UoMGlucose2304.csv  UoMGlucose2305.csv  UoMGlucose2306.csv  UoMGlucose2307.csv  UoMGlucose2308.csv  UoMGlucose2309.csv  UoMGlucose2310.csv  UoMGlucose2313.csv  UoMGlucose2314.csv  UoMGlucose2320.csv  UoMGlucose2401.csv  UoMGlucose2403.csv  UoMGlucose2404.csv  UoMGlucose2405.csv
_raw_data/sharpicManU-GlucoseData/Nutrition Data/: UoMNutrition2301.csv  UoMNutrition2302.csv  UoMNutrition2304.csv  UoMNutrition2305.csv  UoMNutrition2306.csv  UoMNutrition2307.csv  UoMNutrition2308.csv  UoMNutrition2309.csv  UoMNutrition2313.csv  UoMNutrition2314.csv  UoMNutrition2320.csv  (+4 more)
notebooks/: load-data-from-csv.ipynb  load-data.ipynb  viz-data-from-postgres.ipynb  viz-data.ipynb
scripts/: download-d1namo.sh  unzipcsv2parquet.sh
sql/: get_glucose_viz.sql
src/data/: data.py  main.py  tools.py
src/pfun_data/: connect.py
(+80 files in other folders)
