[project]
name = "data"
version = "0.1.0"
description = "data utils for pfun digital health."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "ipython>=9.5.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "psycopg2>=2.9.10",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling", "wheel", "setuptools"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data"]

[dependency-groups]
dev = [
    "pip>=25.2",
    "pandas-stubs>=2.3.2.250827",
    "ipykernel>=6.30.1",
]
